# student-db

./: CMakeCache.txt  CMakeLists.txt  requirements.txt
CMakelists.txt/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  student-database-ut[1]_include.cmake
src/: database.cpp  database.hpp  main.cpp  student.cpp  student.hpp  tests.cpp
